@@ -17,6 +17,7 @@ remove = warnings
 remove = base
 remove = experimental
 remove = Carp
+remove = IO::Socket::IP
 
 ; comes with Moose
 remove = Moose::Role
